2013-06-30  Michal Nazarewicz  <mina86@mina86.com>

	* buffer.c (FKill_buffer): Run `kill-buffer-query-functions'
	before checking whether buffer is modified.  This lets
	`kill-buffer-query-functions' cancel killing of the buffer or save
	its content before `kill-buffer' asks user the "Buffer %s
	modified; kill anyway?" question.

2013-06-30  Jan Djärv  <jan.h.d@swipnet.se>

	* nsfns.m (handlePanelKeys): Don't process Command+Function keys.
	Let the super performKeyEquivalent deal with them (Bug#14747).

2013-06-30  Paul Eggert  <eggert@cs.ucla.edu>

	* widget.c (resize_cb): Remove unused local.

	Do not use GTK 3 if it exists but cannot be compiled.
	* xmenu.c (x_menu_wait_for_event) [!USE_GTK]:
	* xterm.c (x_error_handler) [!USE_GTK]:
	Do not use GTK 3.

	* intervals.c (get_local_map): Actually clip POSITION (Bug#14753).

2013-06-30  Eli Zaretskii  <eliz@gnu.org>

	* intervals.c (get_local_map): Instead of aborting, clip POSITION
	to the valid range of values.  (Bug#14753)

	* xdisp.c (Fmove_point_visually): Invalidate the cursor position
	when moving point by using the current glyph matrix.  This avoids
	the need to force redisplay when this function is called in a
	loop.

2013-06-29  Paul Eggert  <eggert@cs.ucla.edu>

	Fix minor problems found by static checking.
	* coding.c (encode_inhibit_flag, inhibit_flag): New functions.
	Redo the latter's body to sidestep GCC parenthesization warnings.
	(setup_coding_system, detect_coding, detect_coding_system): Use them.
	* coding.c (detect_coding, detect_coding_system):
	* coding.h (struct undecided_spec):
	Use bool for boolean.
	* image.c (QCmax_width, QCmax_height): Now static.
	* xdisp.c (Fmove_point_visually): Remove unused local.

2013-06-29  Eli Zaretskii  <eliz@gnu.org>

	* xdisp.c (Fmove_point_visually): New function.

2013-06-28  Kenichi Handa  <handa@gnu.org>

	* coding.h (define_coding_undecided_arg_index): New enum.
	(coding_attr_index): New members
	coding_attr_undecided_inhibit_null_byte_detection,